--- a/Develop-game-jam.csproj
+++ b/Develop-game-jam.csproj
@@ -79,6 +79,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\MU_Scripts\MU_AIStates.cs" />
+    <Compile Include="Assets\MU_Scripts\MU_Bullet.cs" />
+    <Compile Include="Assets\MU_Scripts\MU_ObjectProperties.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
